# mkdep

./: .gitignore  CHANGELOG  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  config.guess  config.h.in  configure  configure.ac  configure.in  deps.c  depsfiles.c  diffs  filter.c  help.c  mkdep.c  mkdep.h  mkdep.m4  mkdep.man  mkdep.pc.in  output.c  parsing.c  patch  strlcat.c  strlcpy.c  vpath.c
