dnl autoconf script for mkdep
dnl 
dnl $LAAS$
dnl
AC_REVISION($LAAS$)dnl
AC_INIT(mkdep.c)
AC_PREREQ(2.1)

AC_PROG_CC
AC_PROG_INSTALL
AC_CHECK_HEADERS(unistd.h)
AC_REPLACE_FUNCS(strlcat strlcpy)
AC_C_CONST

dnl
dnl Get cannonical host
dnl
AC_CANONICAL_HOST
AC_DEFINE_UNQUOTED(OS_TYPE, "$host_os")

AC_SUBST(exeext)
case ${host_os} in
   cygwin*)
   exeext=.exe
   ;;
esac

PACKAGE=mkdep
VERSION=2.2
AC_SUBST(PACKAGE)
AC_SUBST(VERSION)


AC_OUTPUT(Makefile)
